# CmakeExample

./: .travis.yml  CMakeLists.txt  README.md
demo/: main.cpp
